2008-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* oct-lookup.h: New file.

2008-03-26  David Bateman  <dbateman@feee.fr>

	* Array.cc (assignN): Additional fix for vector assignments.

2008-03-25  David Bateman  <dbateman@feee.fr>

	* Array.cc (assignN): refactor calculation of new dimensions when
	original matrix is empty.
	* Array-util.cc (bool is_vector (const dim_vector&)): New
	function.
	* Array-util.h (bool is_vector (const dim_vector&)): declare it.

2008-03-25  David Bateman  <dbateman@free.fr>

	* sparse-base-chol.h (sparse_base_chol_rep::~sparse_base_chol_rep
	(void)): Only free the factorization if it was created
	* spase-base-chol.cc (sparse_base_chol_rep::init): Don't attempt
	to factorize a matrix that has been flagged as not being positive
	definite.

2008-03-25  John W. Eaton  <jwe@octave.org>

	* lo-mappers.cc (xtrunc): New function.
	* lo-mappers.h: Provide decl.

2008-03-25  Jaroslav Hajek  <highegg@gmail.com>

	* lo-specfun.cc (expm1, log1p): New functions.
	* lo-specfun.h: Provide decls.

	* lo-mappers.cc (xroundb): New function.
	* lo-mappers.h: Provide decl.

2008-03-23  David Bateman  <dbateman@free.fr>

	* mx-ops: Definite binary operators for mixed integer array +
	array case, except for 64bit cases.
	
2008-03-21  David Bateman  <dbateman@free.fr>

	* oct-sparse.h: Add headers for amd.h.

2008-03-20  David Bateman  <dbateman@free.fr>

	* Array.cc (Array<T> Array<T>::diag (octave_idx_type) const): New
	method for diag function.
	* Array.h  (Array<T> diag (octave_idx_type) const): Declare it.
	* Array2.h (Array2<T> diag (octave_idx_type) const): New method.
	* MArray2.h (MArray2<T> diag (octave_idx_type) const): ditto.
	* ArrayN.h (ArrayN<T> diag (octave_idx_type) const): ditto.
	* MArrayN.h (MArrayN<T> diag (octave_idx_type) const): ditto.

	* Sparse.cc (Sparse<T> Sparse<T>::diag (octave_idx_type) const):
	New method for the diag function.
	* Sparse.h  (Sparse<T> diag (octave_idx_type) const): Declare it.