@@ -1,3 +1,7 @@
+2008-04-03  John W. Eaton  <jwe@octave.org>
+
+	* lo-sysdep.cc [__WIN32__ && ! __CYGWIN__]: Include windows.h.
+
 2008-03-27  Jaroslav Hajek  <highegg@gmail.com>
 
 	* oct-lookup.h: New file.
